--- a/views/couponcode.ejs
+++ b/views/couponcode.ejs
@@ -3,15 +3,14 @@
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <title> coupon code</title>
-    
+
     <script src="../server.js"></script>
     <script>
         function verification() {
 
 
             var h = document.getElementById("coupon").value;
-            var k = ' <%= code1 %>';
-
+            var k = '<%= code1 %>'
             if (h == k) {
                 location.replace("/edupay");
             } else {
